--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -38,8 +38,9 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_weight="1"
+                android:text="comedy"
                 android:background="@null"
-                android:hint="Search on movie"
+                android:hint="@string/hint_search_on_movie"
                 android:textColor="@color/black"
                 android:textColorHint="@color/color3"
                 android:textSize="14sp" />
